workload/apps/monitoring/grafana/loki/templates/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-ingress-loki
  namespace: loki
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: alloy
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: alloy
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
    - to:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/22
      ports:
        - protocol: TCP
          port: 443
